[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.4.1"
clap = { version = "4.3.12", features = ["derive"] }
time = { version = "0.3.23", features = ["std"] }
xshell = "0.2.5"
