[package]
name = "devops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
tar = "0.4"
tempfile = "3"
time = { version = "0.3", features = ["std"] }
xshell = "0.2"
